[tool.poetry]
name = "clarify-docs"
version = "0.1.0"
description = ""
authors = ["Artur Mistiuk <mistiuk.artur@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
openai = "^1.3.0"
pypdf2 = "^3.0.1"
langchain = "^0.0.336"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
